# AudioSmith

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_fish_vs_elevenlabs.py  test_local_vs_elevenlabs.py  test_polish_quality.py
.github/workflows/: ci.yml
audiosmith/: __init__.py  __main__.py  audio_normalizer.py  batch_processor.py  cli.py  content_validator.py  cosyvoice_tts.py  diarizer.py  document_formatter.py  download.py  elevenlabs_tts.py  emotion.py  emotion_config.py  error_codes.py  exceptions.py  f5_finetune.py  f5_tts.py  ffmpeg.py  fish_server.py  fish_speech_tts.py  indextts_tts.py  input_handler.py  language_data.py  language_detect.py  log.py  memory_manager.py  metrics.py  mixer.py  models.py  multi_voice_tts.py  orpheus_tts.py  pipeline.py  pipeline_config.py  piper_tts.py  polish_corpus.py  polish_prosody.py  progress.py  prosody.py  punctuation_restorer.py  qwen3_finetune.py  (+20 more)
audiosmith/commands/: __init__.py  batch.py  dub.py  transcribe.py  tts_cmd.py  utils.py
audiosmith/pipeline/: __init__.py  core.py  helpers.py  tts_synthesis.py
audiosmith/postprocessing/: __init__.py  config.py  dynamics.py  processor.py  silence.py  spectral.py
docs/: AUDIOSMITH-TTS-V1-PLAN.md  CHATTERBOX_COMPARISON_SUMMARY.md  continuation-plan.md  quality-features.md
experiments/: run_pro_dubbing.py  run_pro_dubbing_v2.py  test_tts_engines.py  test_tts_simple.py
scripts/: COMPARE_TTS_README.md  compare_chatterbox_params.py  compare_tts_engines.py
tests/: conftest.py  test_audio_normalizer.py  test_batch_processor.py  test_cli.py  test_compare_chatterbox_params.py  test_compare_tts_engines.py  test_content_validator.py  test_cosyvoice_tts.py  test_diarizer.py  test_document_formatter.py  test_download.py  test_elevenlabs_tts.py  test_emotion.py  test_emotion_config.py  test_error_codes.py  test_exceptions.py  test_f5_finetune.py  test_f5_tts.py  test_ffmpeg.py  test_fish_server.py  test_fish_server_integration.py  test_fish_speech_tts.py  test_indextts_tts.py  test_input_handler.py  test_language_data.py  test_language_detect.py  test_log.py  test_memory_manager.py  test_metrics.py  test_mixer.py  test_mixer_cut_on_overlap.py  test_models.py  test_multi_voice_tts.py  test_orpheus_tts.py  test_pipeline.py  test_pipeline_checkpoint.py  test_pipeline_config.py  test_pipeline_helpers.py  test_pipeline_steps.py  test_piper_tts.py  (+28 more)
